# genai

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  setup.cfg
.github/: workflows
.github/workflows/: ci.yaml
docs/: gen_doc_stubs.py  index.md  quickstart.md  requirements.txt
genai/: __init__.py  assist.py  components.py  context.py  display.py  generate.py  magics.py  metamagic.py  prompts.py  suggestions.py  tokens.py
tests/: conftest.py  test_context.py  test_display.py  test_genai.py  test_generate.py  test_magics.py  test_suggestions.py  test_tokens.py
