[tool.poetry]
name = "genai"
version = "0.10.0"
description = "Generative AI for IPython (enhance your code cells)"
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
vdom = "^0.6"
ipython = "^8.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
